--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,12 @@ dependencies:
   uuid: ^3.0.7
   image_picker: ^0.8.7+5
   shared_preferences: ^2.1.1
+  firebase_core: ^4.2.1      
+  firebase_auth: ^6.1.1      
+  cloud_firestore: ^6.0.3   
+  firebase_storage: ^13.0.4
+  path_provider: ^2.1.5
+
 
 dev_dependencies:
   flutter_test:
